<?xml version="1.0"?>
<package format="2">
    <name>caspr_rviz</name>
    <version>0.0.0</version>
    <description>RViz for capsr</description>
    <maintainer email="ypchan@mae.cuhk.edu.hk">Yin Pok Chan</maintainer>
    <license>BSD 3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>rviz</depend>
</package>
